@@ -8,18 +8,27 @@ import org.had.patientservice.dto.AppointmentDto;
 import org.had.patientservice.entity.*;
 import org.had.patientservice.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.ApplicationContext;
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.FileSystemResource;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.ResourceLoader;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.reactive.function.BodyInserters;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Mono;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Optional;
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.*;
 
 @Service
 public class AppointmentService {
@@ -43,7 +52,12 @@ public class AppointmentService {
     private WebClient webClient;
 
 
-    public String createNewAppointment(AppointmentDto appointmentDto){
+
+    @Autowired
+    private ResourceLoader resourceLoader;
+
+
+    public void createNewAppointment(AppointmentDto appointmentDto){
         AppointmentDetails appointmentDetails = new AppointmentDetails();
         appointmentDetails.setDoctor_id(appointmentDto.getDoctor_id());
         appointmentDetails.setDoctor_name(appointmentDto.getDoctor_name());
@@ -65,7 +79,6 @@ public class AppointmentService {
 
         addPatientVitals(opConsultationId, appointmentDto);
 
-        return "successfully created appointment";
     }
 
     public String addPatientVitals(OpConsultation opConsultation, AppointmentDto appointmentDto){
@@ -90,7 +103,7 @@ public class AppointmentService {
     }
 
     public ResponseEntity<?> getAppointmentDetails(Integer id){
-        if(!patientDetailsRepository.findById(id).isEmpty()){
+        if(patientDetailsRepository.findById(id).isPresent()){
             PatientDetails patientDetails = patientDetailsRepository.findById(id).get();
             if(appointmentRepository.findAllByPatientId(patientDetails).isEmpty()) {
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("No Appointment found for this patient");
@@ -106,7 +119,7 @@ public class AppointmentService {
         int opId = Integer.parseInt(id);
         List<PatientVitals> patientVitalsList = patientVitalsRepository.findByOpId(opId);
         if (!patientVitalsList.isEmpty()) {
-            PatientVitals patientVitals = patientVitalsList.get(0);
+            PatientVitals patientVitals = patientVitalsList.getFirst();
             return ResponseEntity.ok(patientVitals);
         }
         return ResponseEntity.badRequest().body("Patient Vitals Not found");
@@ -139,10 +152,13 @@ public class AppointmentService {
                         prescriptionDetails.setOpConsultation(opConsultation);
                         prescriptionDetailsRepository.save(prescriptionDetails);
                     }
-                   opConsultation.setObservations(Observations);
-                   opConsultationRepository.save(opConsultation);
+                    opConsultation.setObservations(Observations);
+                    opConsultationRepository.save(opConsultation);
 
-                   linkCareContext(opId+"", patientId);
+                    String res = linkCareContext(opId+"", patientId);
+                    System.out.println(res);
+
+
 
                     Optional<AppointmentDetails> appointmentDetailsOptional = appointmentRepository.findById(opId);
                     if (appointmentDetailsOptional.isPresent()) {
@@ -154,6 +170,7 @@ public class AppointmentService {
                     else {
                         System.out.println("Appointment Not found");
                     }
+
 
                    return ResponseEntity.ok("Prescription Record saved");
                 } else {
@@ -189,10 +206,8 @@ public class AppointmentService {
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(BodyInserters.fromValue(requestBody))
                 .retrieve()
-                .onStatus(HttpStatusCode::isError, clientResponse -> {
-                    return clientResponse.bodyToMono(String.class)
-                            .flatMap(errorBody -> Mono.error(new MyWebClientException(errorBody, clientResponse.statusCode().value())));
-                })
+                .onStatus(HttpStatusCode::isError, clientResponse -> clientResponse.bodyToMono(String.class)
+                        .flatMap(errorBody -> Mono.error(new MyWebClientException(errorBody, clientResponse.statusCode().value()))))
                 .bodyToMono(String.class).block();
     }
 
@@ -202,4 +217,89 @@ public class AppointmentService {
         return ResponseEntity.ok(prescriptionDetailsList);
     }
 
+    public String handleFileUpload(MultipartFile file, String folderName) {
+        if (file.isEmpty()) {
+            return "No file uploaded";
+        }
+
+        try {
+            // Specify the directory where you want to save the file on the server
+            String currentDirectory = System.getProperty("user.dir");
+            System.out.println("Current directory: " + currentDirectory);
+            String uploadDir = currentDirectory + "/files/";
+
+            // Create the directory if it doesn't exist
+            File directory = new File(uploadDir);
+            if (!directory.exists()) {
+                directory.mkdirs();
+            }
+            File folder = new File(uploadDir + folderName);
+            if (!folder.exists()) {
+                folder.mkdirs();
+            }
+
+            File destFile = new File(folder, Objects.requireNonNull(file.getOriginalFilename()));
+            file.transferTo(destFile);
+            return "File uploaded successfully";
+        } catch (IOException e) {
+            e.printStackTrace();
+            return "Failed to upload file";
+        }
+    }
+
+    public ResponseEntity<?> getImagesFromFolder(String folderName) {
+
+        List<FileSystemResource> imageList = new ArrayList<>();
+        try {
+            // Specify the directory where the files are stored on the server
+            String currentDirectory = System.getProperty("user.dir");
+            String uploadDir = currentDirectory + "/files/";
+
+            // Create a File object representing the folder
+            File folder = new File(uploadDir + folderName);
+
+            // Check if the folder exists
+            if (folder.exists() && folder.isDirectory()) {
+                // Get the list of files in the folder
+                File[] files = folder.listFiles();
+                if (files != null) {
+                    // Iterate over the files and add image files to the imageList
+                    for (File file : files) {
+                        if (file.isFile() && isImageFile(file)) {
+                            imageList.add(new FileSystemResource(file));
+                        }
+                    }
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        System.out.println(imageList);
+        if (!imageList.isEmpty()) {
+            // Return the list of image files as the response
+            return ResponseEntity.ok()
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .body(imageList);
+        } else {
+            // If no image files were found, return a 404 Not Found response
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
+        }
+    }
+
+    private boolean isImageFile(File file) {
+        String fileName = file.getName().toLowerCase();
+        return fileName.endsWith(".jpg") || fileName.endsWith(".jpeg") || fileName.endsWith(".png") || fileName.endsWith(".gif") || fileName.endsWith(".bmp");
+    }
+
+    public void saveFile(String fileName, byte[] fileData) throws IOException {
+        Path filePath = Paths.get(getResourceFilePath() + fileName);
+        Files.write(filePath, fileData);
+    }
+    public byte[] getFile(String fileName) throws IOException {
+        Path filePath = Paths.get(getResourceFilePath() + fileName);
+        return Files.readAllBytes(filePath);
+    }
+    private String getResourceFilePath() throws IOException {
+        return resourceLoader.getResource("classpath:static/files/").getFile().getAbsolutePath() + "/";
+    }
 }
